Fix too light headers

--- a/frontend/app/sass/serverboards.sass
+++ b/frontend/app/sass/serverboards.sass
@@ -52,13 +52,13 @@ $top-height: 75px
 
 h1, h1.ui.header
   color: #333
-  font-weight: lighter
+  font-weight: 300
   &.centered
     justify-content: center
 
 h2.ui.header, h3.ui.header, h3.ui.item.header
   color: #555
-  font-weight: lighter
+  font-weight: 300
   &.centered
     justify-content: center
 
